syntax = "proto3";

option java_multiple_files = true;
option java_package = "billing";
option java_outer_classname = "BillingServiceOuterClass";

service BillingService {
  rpc CreateBillingAccount (BillingAccountRequest) returns (BillingAccountResponse);
}

message BillingAccountRequest {
  string patientId = 1;
  string name = 2;
  string email = 3;
}

message BillingAccountResponse {
  string accountId = 1;
  string status = 2;
}